Remove swagger docs from availability controller.
